--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -99,6 +99,10 @@ body {
 .header ul.header-links li.header-link {
     display: inline-flex;
     padding: 15px 20px;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: #777;
 }
 
 .header ul.header-links li.header-link.active {
@@ -326,4 +330,34 @@ td.timer-column {
 .about {
     margin-top: 10em;
     text-align: center;
+}
+
+.create-client-form {
+    margin: 0 auto;
+    margin-top: 100px;
+    width: 400px;
+}
+
+.create-client-form div {
+    margin-bottom: 1.5em;
+}
+
+.ccinput {
+    width: 100%;
+    border: 1px solid rgba(0,0,0,.12);
+}
+
+.cctextarea {
+    width: 100%;
+    height: 100px;
+    border: 1px solid rgba(0,0,0,.12);
+}
+
+.cclabel {
+    color: #777;
+    font-weight: bold;
+}
+
+.create-client-form button {
+    margin-left: 9em;
 }
