--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -346,12 +346,14 @@ td.timer-column {
     width: 100%;
     border: 1px solid rgba(0,0,0,.12);
     height: 30px;
+    padding: 0.5em;
 }
 
 .cctextarea {
     width: 100%;
     height: 100px;
     border: 1px solid rgba(0,0,0,.12);
+    padding: 0.5em;
 }
 
 .cclabel {
