Clean up views; embed create-client component inside `clients` panel
- Making create-client a toggle-able form inside the `clients` panel
  as this is behaviour when creating projects/tasks as well as editing
  clients

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -29,6 +29,7 @@
     border: none;
     border-radius: 4px;
     padding: 5px 10px;
+    margin-right: 5px;
 }
 
 .btn.btn-primary {
@@ -331,7 +332,7 @@ td.timer-column {
 
 .create-client-form {
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 20px;
     width: 700px;
 }
 
@@ -341,7 +342,7 @@ td.timer-column {
 
 .create-project-form {
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 20px;
     width: 700px;
 }
 
