Allow admin to invite users
Co-authored-by: Harsh Gupta <harsh@nilenso.com>

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -349,6 +349,11 @@ td.timer-column {
     margin-bottom: 1.5em;
 }
 
+.invite-user-form {
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 700px;
+}
 
 .ccinput {
     width: 100%;
